--- a/conf/conf.toml
+++ b/conf/conf.toml
@@ -1,8 +1,8 @@
 
 [monitor]
     process = 'influxd'
-    memory_limit = 102400
-    restart_cmd = 'service influxdb stop'
+    memory_limit = 102400 # bytes for now
+    restart_cmd = 'service influxdb stop' # the service restart order
 
 [log]
     console = true
